[project]
name = "vtasks"
version = "7.1.0"
description = "Personal tasks scheduled with Prefect"
authors = [{ name = "Arnau Villoro", email = "arnau@villoro.com" }]
maintainers = [{ name = "Arnau Villoro", email = "arnau@villoro.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Monitoring",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "backoff>=2.2.1",
]
