[tool.black]
line-length = 100

[tool.poetry]
name = "vtasks"
version = "7.1.0"
description = "Personal tasks scheduled with Prefect"
authors = ["Arnau Villoro <arnau@villoro.com>"]
maintainers = ["Arnau Villoro <arnau@villoro.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/villoro/vtasks"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
backoff = "^2.2.1"
cryptocompare = "^0.7.6"
dbt-duckdb = "^1.9.1"
dropbox = "^11.36.0"
duckdb = "^1.1.3"
gcsa = "^2.0.1"
gspread = "^5.7.2"
numpy = "^1.26" # Needed for compatibility
pandas = "^1.5.2"
prefect = "^3.2.7"
pyarrow = "^10.0.1"
regex = "^2022.10.31"
setuptools = "^75.8.0" # Manually specified to fix an odd error in prefect
vcrypto = "^4.2.0"
vdropbox = "^0.2.7"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
loguru = "^0.7.0"
notebook = "^6.5.2"
pre-commit = "^2.20.0"
ruff = "^0.9.6"
tqdm = "^4.64.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
