[project]
name = "vtasks"
version = "7.5.4"
description = "Personal tasks scheduled with Prefect"
authors = [{ name = "Arnau Villoro", email = "arnau@villoro.com" }]
maintainers = [{ name = "Arnau Villoro", email = "arnau@villoro.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Monitoring",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "backoff>=2.2.1",
    "cryptocompare>=0.7.6",
    "dbt-duckdb>=1.9.2",
    "duckdb>=1.4.0",
    "gcsa>=2.5.1",
    "gspread>=6.1.4",
    "pandas>=2.2.3",
    "prefect==3.2.7",
    "pyarrow>=19.0.1",
    "regex>=2024.11.6",
    "setuptools>=75.8.0",
    "vcrypto>=4.2.1",
    "vdropbox==1.0.2",
]
